fix(import): compatibilidad Java 8 — reemplaza isBlank() y Map.of() por equivalentes Java 8
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>