@@ -8,7 +8,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.Map;
+import java.util.Collections;
 
 @RestController
 @RequestMapping("/api/import")
@@ -17,33 +17,31 @@ public class ImportController {
 
     private final ImportService importService;
 
-    /** Vista previa de lo que se importaría sin guardar nada */
     @PostMapping(value = "/preview", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public ResponseEntity<?> preview(@RequestParam("file") MultipartFile file) {
         if (file.isEmpty()) {
-            return ResponseEntity.badRequest().body(Map.of("error", "El archivo está vacío"));
+            return ResponseEntity.badRequest().body(Collections.singletonMap("error", "El archivo está vacío"));
         }
         String name = file.getOriginalFilename() != null ? file.getOriginalFilename() : "";
         if (!name.endsWith(".xlsx") && !name.endsWith(".xls")) {
-            return ResponseEntity.badRequest().body(Map.of("error", "Solo se aceptan archivos .xlsx o .xls"));
+            return ResponseEntity.badRequest().body(Collections.singletonMap("error", "Solo se aceptan archivos .xlsx o .xls"));
         }
         try {
             return ResponseEntity.ok(importService.preview(file));
         } catch (Exception e) {
-            return ResponseEntity.status(500).body(Map.of("error", "Error al leer el archivo: " + e.getMessage()));
+            return ResponseEntity.status(500).body(Collections.singletonMap("error", "Error al leer el archivo: " + e.getMessage()));
         }
     }
 
-    /** Ejecuta la importación definitiva */
     @PostMapping(value = "/ejecutar", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public ResponseEntity<?> ejecutar(@RequestParam("file") MultipartFile file) {
         if (file.isEmpty()) {
-            return ResponseEntity.badRequest().body(Map.of("error", "El archivo está vacío"));
+            return ResponseEntity.badRequest().body(Collections.singletonMap("error", "El archivo está vacío"));
         }
         try {
             return ResponseEntity.ok(importService.ejecutar(file));
         } catch (Exception e) {
-            return ResponseEntity.status(500).body(Map.of("error", "Error durante la importación: " + e.getMessage()));
+            return ResponseEntity.status(500).body(Collections.singletonMap("error", "Error durante la importación: " + e.getMessage()));
         }
     }
 }
